--- a/_posts/2020-08-24-denken.markdown
+++ b/_posts/2020-08-24-denken.markdown
@@ -31,7 +31,7 @@ Muss das so sein?
 >Allgemein wird davon ausgegangen. Dass nennt sich 'erwachsen werden' und wird als erstrebenswert angesehen.
 
 Ist das gut und richtig so?
->Wenn es ein Gleichgewicht zwischen Jung und Alt gibt, ja. Wenn die, die Interesse am ergründen haben auch mitreden und mitbestimmen dürfen. Die Macht liegt aber bei denen die Ausschöpfen und Macht wird ungern abgeben oder geteilt.
+>Wenn es ein Gleichgewicht zwischen Jung und Alt gibt, ja. Wenn die, die Interesse am ergründen haben auch mitreden und mitbestimmen dürfen. Die Macht liegt aber bei denen die Ausschöpfen, und Macht wird ungern abgeben oder geteilt.
 
 Muss Macht genommen werden?
 >Die Geschichte sagt ja, wobei es nach einer Revolution oft schlechter war als vorher. Große Ideen sollten auch kleine im Gepäck haben um sicher und stabil zu landen. Die Welt ist die Welt und die Leute die Leute, das wird sich nicht von jetzt auf gleich ändern.
