--- a/_posts/2020-08-24-leere.markdown
+++ b/_posts/2020-08-24-leere.markdown
@@ -3,7 +3,8 @@ layout: post
 title:  "Leere"
 date:   2020-08-24 10:00:00 +0200
 categories: philosophie
-tags: depression
+tags: angst abstrahieren leere
+description: Jeder Mensch hat diese Leere in sich. Jeder geht unterschiedlich damit um, das ist eine der Freiheiten die uns bleibt.
 ---
 
 Jeder Mensch hat diese Leere in sich. Jeder geht unterschiedlich damit um, das ist eine der Freiheiten die uns bleibt.
