--- a/_posts/2020-08-24-leere.markdown
+++ b/_posts/2020-08-24-leere.markdown
@@ -31,6 +31,9 @@ Eine Faszination der Leere ist das sie das Unendliche bedingt. Die Leere und das
 
 Das Bild das man von der Leere und dem Unendlichen hat hängt mit dem Bild vom Universum zusammen. Daher entwickelt es sich mit neuen wissenschaftlichen Erkenntnissen. Wie es angenfangen hat (Big Bang), was vorher war(???), was jenseits der Grenze ist (dunkle Materie?), wie es endet (Kältetod) und wie das jetzt genau mit der Expansion ist (konstant oder beschleunigt), ob es deterministisch ist oder zufällig. Vieles davon steht noch zur Debatte, die Absperrbänder um die Debatte sind aber sehr real, die Fronten verhärtet. Vor allem bei der Quantenmechanik hat sich die Kopenhagen-Interpretation durchgesetzt. Nur langsam sprechen Leute wieder über andere Interpretationen, wie etwa die many-worlds Interpretation.
 
+------------------------
+### Anmerkungen
+
 
 
 
