--- a/_posts/2020-10-08-Angst.markdown
+++ b/_posts/2020-10-08-Angst.markdown
@@ -28,7 +28,7 @@ Unreflektierte Angst wird zu Paranoia. Sie nistet sich ein, bestimmt das Denken,
 
 <figure>
   <img class="marginauto" src='/assets/images/angsthuckepack.png' width="250" style="background:none ; border:none; box-shadow:none"/>
-  <figcaption>Paranoia wächst.</figcaption>
+  <figcaption>Paranoia</figcaption>
 </figure> 
 
 <style>
