--- a/_posts/2020-08-24-denken.markdown
+++ b/_posts/2020-08-24-denken.markdown
@@ -11,7 +11,7 @@ Denken ist schwer. Verdammt schwer. Man muss sich innerlich aufsplitten und eine
 
 [^1]:Rene Descarted hat Cogito, ergo sum (Ich denke also bin ich) gewählt, sicher nicht die schlechteste. Für mich ist die Basis: Ich habe ein Bewusstsein. Auf die Basis sind dann weitere Stockwerke aufgebaut, etwa: 'andere Menschen haben ein Bewusstsein', oder 'die physische Welt hat eine intrinsische Realität'. 100%ig fix ist aber nur die erste Basis.
 
-Das Nachdenken ist eine gute und notwendige Inspiration fürs eigene Denken. Dabei liest man einen Autor und versucht seinen Gedanken möglichst so zu folgen wie er sie durch seine Ausdrucksweise kommunizieren wollte. Wenn man dann zusammen mit dem Autor eine Abzweigung erreicht eigene Gedanken hat, ist das eine gute Übung fürs spätere eigene Denken. Um den Autor gegenüber fair zu sein sollte man dieses aber erstmal außen vor lassen und der Abzweigung folgen die er genommen hat. 
+Das Nachdenken ist eine gute und notwendige Inspiration fürs eigene Denken. Dabei liest man einen Autor und versucht seinen Gedanken möglichst so zu folgen wie er sie durch seine Ausdrucksweise kommunizieren wollte. Wenn man dann, zusammen mit dem Autor, eine Abzweigung erreicht und eigene Gedanken hat, ist das ein guter Einstiegspunkt fürs spätere eigene Denken. Um den Autor gegenüber fair zu sein sollte man dieses aber erstmal außen vor lassen und der Abzweigung folgen die er genommen hat. 
 
 -----
 ### Beispiel: 
