--- a/_posts/2021-02-10-freiheit.markdown
+++ b/_posts/2021-02-10-freiheit.markdown
@@ -39,15 +39,15 @@ Die negative Freiheit hat in Europa also ein solides Fundament, ist systemisch g
 Ich denke es führt zu nichts, wenn man sagt, man ist frei alles zu tun und das Thema damit abzuschließen. Genauer wäre es zu sagen, man ist durch Wohlstand und technischen Fortschritt größtenteils davon befreit, Dinge tun zu müssen, hat also geschichtlich gesehen den Zenit an negativer Freiheit erreicht.
 
 Positive Freiheit ist Denken und Leben ohne Sicherheitsgeländer. Das kann, je nach Level an negativer Freiheit, einschüchternd sein, weil es keine Orientierung gibt, keine Richtung. 
-Irgendwann führt das ideal der Maximierung der negativen Freiheit nicht mehr weiter. Man alle belastenden Zwänge und Traditionen abgebaut, es muss aber irgendwie (positiv) weiter gehen. Wann ist die Strömung, die in Europa im 15. Jh begonnen hat vorbei? War es Anfang des 20. Jh? Da haben zumindest viele Menschen ihre Freiheit abgegeben und sich einem faschistischen System hingegeben. Aber seit dem gab es doch eine vermeintliche (Re)Rennaissance der negativen Freiheit. Sie wurde formalisiert und in Gesetz gegossen, vielleicht hat sie das zu schwer und träge gemacht und der ursprüngliche Geist war verloren. Man ist doch *vermeintlich* viel weniger Zwängen unterworfen als sogar im 19. Jh. 
+Irgendwann führt das Ideal der Maximierung der negativen Freiheit nicht mehr weiter. Man alle belastenden Zwänge und Traditionen abgebaut, es muss aber irgendwie (positiv) weiter gehen. Wann ist die Strömung, die in Europa im 15. Jh begonnen hat vorbei? War es Anfang des 20. Jh? Da haben zumindest viele Menschen ihre Freiheit abgegeben und sich einem faschistischen System hingegeben. Aber seit dem gab es doch eine vermeintliche (Re)Rennaissance der negativen Freiheit. Sie wurde formalisiert und in Gesetz gegossen, vielleicht hat sie das zu schwer und träge gemacht und der ursprüngliche Geist war verloren. Man ist doch *vermeintlich* viel weniger Zwängen unterworfen als sogar im 19. Jh. 
 
-Das Gefühl, man habe als Europäer auch die Pflicht sie zu nutzen, um der langen Tradition des Aufbaus von negative Freiheit gerecht zu werden, ist prävalent. Die Errungenschaften der tapferen Kämpfer auf denen unsere Kultur basiert muss ja gewürdigt werden. Ich vermute, dass die negative Freiheit heute nicht die selbe ist wie die im 19. Jh. Implizit wird mehr erwartet den je. Die Zwängen wurde nicht weiter abgebaut, sondern geschickt versteckt. Die heute Freiheit ist ein Simulakrum, eine Kopie (mittlerweile) ohne Original.
+Das Gefühl, man habe als Europäer auch die Pflicht sie zu nutzen, um der langen Tradition des Aufbaus von negativer Freiheit gerecht zu werden, ist prävalent. Die Errungenschaften der tapferen Kämpfer auf denen unsere Kultur basiert muss ja gewürdigt werden. Ich vermute, dass die negative Freiheit heute nicht die selbe ist wie die im 19. Jh. Implizit wird mehr erwartet den je. Die Zwängen wurde nicht weiter abgebaut, sondern geschickt versteckt. Die heutige Freiheit ist ein Simulakrum, eine Kopie (mittlerweile) ohne Original.
 
-Es geht ja noch weiter, wenn man sich zu sehr auf die negative Freiheit konzentriert, und versucht sie zu stärken, dreht man sich im Kreis. Sehnt sich nach etwas Bekanntem, etwas mit langer Tradition, und wendet sich gegen das ursprüngliche Ideal. Wenn man sich das Befreien von allen Zwängen zum Lebensinhalt gemacht hat ist das gegen der aufklärerischen Geist, der das überhaupt erst bedingt hat. Ich denke das qualifiziert sich als ein Catch 22 https://de.wikipedia.org/wiki/Catch-22_(Dilemma) 
+Es geht ja noch weiter, wenn man sich zu sehr auf die negative Freiheit konzentriert, und versucht sie zu stärken, dreht man sich im Kreis. Sehnt sich nach etwas Bekanntem, etwas mit langer Tradition, und wendet sich gegen das ursprüngliche Ideal. Wenn man sich das Befreien von allen Zwängen zum Lebensinhalt gemacht hat ist das gegen der aufklärerischen Geist, der das überhaupt erst bedingt hat. Ich denke das qualifiziert sich als ein [Catch 22 https://de.wikipedia.org/wiki/Catch-22_(Dilemma)]
 
 Man baut sich eine Tradition, ein Sicherheitsgerüst, aus dem Ideal Tradtionen abbauen zu wollen. Was ist es, das man damit aufbaut? Der ominöse Nihilismus, in dem nichts mehr irgendwas bedeutet?
 
-Wir sind (negativ) frei. Und zwar auf einen Level, von dem mehr nicht unbedingt besser ist. Nichts ist so gut, dass mehr davon automatisch besser ist[^2]. Wenn wir uns trotz dieses, bei weitem ausreichendem, Levels an negativer Freiheit weiter auf sie als Ideal konzentrieren ist das eine Perversion des Geistes der Aufklärung. Statt Beschränkungen, Dogmen und Fesseln abzubauen, bauen wir ein neues Sicherheitsgerüst, das der *Wokeness*. Das scheint mir das Problem der *social justice warriors* und der *cancel culture* zu sein. Sie ist der Tod von kreativen öffentlichen Austausch, da jedes Wort auf die Goldwaage gelegt und nach den obskuresten Maßstäben der (negativen) Freiheit durchleuchtet wird. Vertößt man gegen ein unrealsitisches Ideal ist man öffentlich gecancelt und hat keine Möglichkeit der Rehabilitation. Man ist so verdammt frei, dass man nichts mehr sagen darf.
+Wir sind (negativ) frei. Und zwar auf einen Level, von dem mehr nicht unbedingt besser ist. Nichts ist so gut, dass mehr davon automatisch besser ist[^2]. Wenn wir uns trotz dieses, bei weitem ausreichendem, Levels an negativer Freiheit weiter auf sie als Ideal konzentrieren ist das eine Perversion des Geistes der Aufklärung. Statt Beschränkungen, Dogmen und Fesseln abzubauen, bauen wir ein neues Sicherheitsgerüst, das der *Wokeness*. Das scheint mir das Problem der *social justice warriors* und der *cancel culture* zu sein. Sie ist der Tod von kreativen öffentlichen Austausch, da jedes Wort auf die Goldwaage gelegt und nach den obskuresten Maßstäben der (negativen) Freiheit durchleuchtet wird. Vertößt man gegen ein unrealsitisches Ideal ist man öffentlich gecancelt und hat keine Möglichkeit der Rehabilitation.
 
 [^2]: Analog ist auch nichts so schlecht, das nicht ein bisschen was davon gut ist. 
 
@@ -59,7 +59,7 @@ Eine Konsequenz von historisch hoher negativer Freiheit und Individualisierung i
 
 Kritisch sehe ich die (negative) Freiheit als Ideal, weil es leicht scheint sie als Argument zum Abbau von Strukuturen und Rahmenbedingungen zu benutzen. Auch im Denken. Und das dann als etwas Positives zu verkaufen.
 
-Das geht einher mit der immer weiteren *Individualisierung* des Einzelnen. Irgendwann ist jeder sein eigener Staat, der sich um alle Belange selber kümmern muss. Bekommt individuelle Nachrichten angezeigt, die durch den Algorithmus spezifisch auf ihn zugeschnitten wurden. Es gibt auch keinen Weg mehr raus, weil man ja nur sich selbst vetrauen kann. Dem Selbst, dass sich selbst vertärkt und definiert hat.
+Das geht einher mit der immer weiteren *Individualisierung* des Einzelnen. Irgendwann ist jeder sein eigener Staat, der sich um alle Belange selber kümmern muss. Bekommt individuelle Nachrichten angezeigt, die durch den Algorithmus spezifisch auf ihn zugeschnitten wurden. Es gibt auch keinen Weg mehr raus, weil man ja nur sich selbst vetrauen kann. Dem Selbst, das sich selbst vertärkt und definiert hat.
 
 ------------------------
 ### Podcasts dazu:
