--- a/_posts/2021-02-10-freiheit.markdown
+++ b/_posts/2021-02-10-freiheit.markdown
@@ -43,7 +43,7 @@ Irgendwann führt das Ideal der Maximierung der negativen Freiheit nicht mehr we
 
 Das Gefühl, man habe als Europäer auch die Pflicht sie zu nutzen, um der langen Tradition des Aufbaus von negativer Freiheit gerecht zu werden, ist prävalent. Die Errungenschaften der tapferen Kämpfer auf denen unsere Kultur basiert muss ja gewürdigt werden. Ich vermute, dass die negative Freiheit heute nicht die selbe ist wie die im 19. Jh. Implizit wird mehr erwartet den je. Die Zwängen wurde nicht weiter abgebaut, sondern geschickt versteckt. Die heutige Freiheit ist ein Simulakrum, eine Kopie (mittlerweile) ohne Original.
 
-Es geht ja noch weiter, wenn man sich zu sehr auf die negative Freiheit konzentriert, und versucht sie zu stärken, dreht man sich im Kreis. Sehnt sich nach etwas Bekanntem, etwas mit langer Tradition, und wendet sich gegen das ursprüngliche Ideal. Wenn man sich das Befreien von allen Zwängen zum Lebensinhalt gemacht hat ist das gegen der aufklärerischen Geist, der das überhaupt erst bedingt hat. Ich denke das qualifiziert sich als ein [Catch 22 https://de.wikipedia.org/wiki/Catch-22_(Dilemma)]
+Es geht ja noch weiter, wenn man sich zu sehr auf die negative Freiheit konzentriert, und versucht sie zu stärken, dreht man sich im Kreis. Sehnt sich nach etwas Bekanntem, etwas mit langer Tradition, und wendet sich gegen das ursprüngliche Ideal. Wenn man sich das Befreien von allen Zwängen zum Lebensinhalt gemacht hat ist das gegen der aufklärerischen Geist, der das überhaupt erst bedingt hat. Ich denke das qualifiziert sich als ein [Catch 22](https://de.wikipedia.org/wiki/Catch-22_(Dilemma) "catch 22")
 
 Man baut sich eine Tradition, ein Sicherheitsgerüst, aus dem Ideal Tradtionen abbauen zu wollen. Was ist es, das man damit aufbaut? Der ominöse Nihilismus, in dem nichts mehr irgendwas bedeutet?
 
