--- a/_posts/2021-02-11-musashi.markdown
+++ b/_posts/2021-02-11-musashi.markdown
@@ -80,7 +80,7 @@ Er hat sich in der Vorbereitung auf den Kampf jedoch von allem Unwesentlichen be
 ### Takuan 
 *zen-buddhistischer Wandermönch*
 
-Ignoriert gesellschaftliche Normen, bewegt sich außerhalb des Systems. Ist im Herzen jung geblieben, unterhält sich zum Beispiel auf Augenhöhe mit Oko, die im Koster wohnt oder läuft in einem sehr prüdem Japan halbnackt durch die Gegend. Er ist aber keine Narr, ist gut vernetzt mit entscheidenden Persönlichkeiten und formt die Vorgänge der jungen Nation nicht unwesentlich. Politisch gut vernetzt und immer am richtigen Ort zur richtigen Zeit. Rettet am Anfang des Romans Takezos Leben und gegen Ende auch Matahachis Leben. Trotz seiner gesellschaftlichen recht hohen Stellung als Mönch erhebt er keinen Anspruch absolute Wahrheiten zu kennen. Er spricht sich explizit gegen übertriebene Frömmelei aus und dagegen, dass sich Klöster an der Frömmigkeit der Gläubigen bereichern.
+Ignoriert gesellschaftliche Normen, bewegt sich außerhalb des Systems. Ist im Herzen jung geblieben, unterhält sich zum Beispiel auf Augenhöhe mit Otsu, die im Koster wohnt oder läuft in einem sehr prüdem Japan halbnackt durch die Gegend. Er ist aber keine Narr, ist gut vernetzt, und formt die Vorgänge der jungen Nation nicht unwesentlich. Er ist politisch aktiv und immer am richtigen Ort zur richtigen Zeit. Er rettet am Anfang des Romans Takezos Leben und gegen Ende auch das von Matahachi. Trotz seiner gesellschaftlichen recht hohen Stellung als Mönch erhebt er keinen Anspruch absolute Wahrheiten zu kennen. Er spricht sich explizit gegen übertriebene Frömmelei aus und dagegen, dass sich Klöster an der Frömmigkeit der Gläubigen bereichern.
 
 ### Otsu
 *im Tempel aufgewachsenes Waisenmädchen, Verlobte Matahachis*
