--- a/_posts/2021-02-10-freiheit.markdown
+++ b/_posts/2021-02-10-freiheit.markdown
@@ -39,9 +39,9 @@ Die negative Freiheit hat in Europa also ein solides Fundament, ist systemisch g
 Ich denke es führt zu nichts, wenn man sagt, man ist frei alles zu tun und das Thema damit abzuschließen. Genauer wäre es zu sagen, man ist durch Wohlstand und technischen Fortschritt größtenteils davon befreit, Dinge tun zu müssen, hat also geschichtlich gesehen den Zenit an negativer Freiheit erreicht.
 
 Positive Freiheit ist Denken und Leben ohne Sicherheitsgeländer. Das kann, je nach Level an negativer Freiheit, einschüchternd sein, weil es keine Orientierung gibt, keine Richtung. 
-Irgendwann führt das Ideal der Maximierung der negativen Freiheit nicht mehr weiter. Man alle belastenden Zwänge und Traditionen abgebaut, es muss aber irgendwie (positiv) weiter gehen. Wann ist die Strömung, die in Europa im 15. Jh begonnen hat vorbei? War es Anfang des 20. Jh? Da haben zumindest viele Menschen ihre Freiheit abgegeben und sich einem faschistischen System hingegeben. Aber seit dem gab es doch eine vermeintliche (Re)Rennaissance der negativen Freiheit. Sie wurde formalisiert und in Gesetz gegossen, vielleicht hat sie das zu schwer und träge gemacht und der ursprüngliche Geist war verloren. Man ist doch *vermeintlich* viel weniger Zwängen unterworfen als sogar im 19. Jh. 
+Irgendwann führt das Ideal der Maximierung der negativen Freiheit nicht mehr weiter. Alle belastenden Zwänge und Traditionen wurden abgebaut, es muss aber irgendwie (positiv) weiter gehen. Wann ist die Strömung, die in Europa im 15. Jh begonnen hat vorbei? War es Anfang des 20. Jh? Da haben zumindest viele Menschen ihre Freiheit abgegeben und sich einem faschistischen System hingegeben. Aber seit dem gab es doch eine vermeintliche (Re)Rennaissance der negativen Freiheit. Sie wurde formalisiert und in Gesetz gegossen, vielleicht hat sie das zu schwer und träge gemacht und der ursprüngliche Geist war verloren. Man ist doch *vermeintlich* viel weniger Zwängen unterworfen als sogar im 19. Jh. 
 
-Das Gefühl, man habe als Europäer auch die Pflicht sie zu nutzen, um der langen Tradition des Aufbaus von negativer Freiheit gerecht zu werden, ist prävalent. Die Errungenschaften der tapferen Kämpfer auf denen unsere Kultur basiert muss ja gewürdigt werden. Ich vermute, dass die negative Freiheit heute nicht die selbe ist wie die im 19. Jh. Implizit wird mehr erwartet den je. Die Zwängen wurde nicht weiter abgebaut, sondern geschickt versteckt. Die heutige Freiheit ist ein Simulakrum, eine Kopie (mittlerweile) ohne Original.
+Das Gefühl, man habe als Europäer auch die Pflicht sie zu nutzen, um der langen Tradition des Aufbaus von negativer Freiheit gerecht zu werden, ist prävalent. Die Errungenschaften der tapferen Kämpfer, auf denen unsere Kultur basiert, muss ja gewürdigt werden. Ich vermute jedoch, dass die (positive?) Freiheit heute nicht die selbe ist wie die im 19. Jh. Negative Freiheit ist die Pflicht, positive Freiheit die Kür. Implizit wird mehr erwartet den je. Die Zwänge wurden nicht weiter abgebaut, sondern geschickt versteckt. Bzw die Art der Zwänge hat sich gewandelt, und dadurch auch die positive Freiheit, die sie ermöglicht / fordert. Die heutige Freiheit ist ein Simulakrum, eine Kopie (mittlerweile) ohne Original. Sie kann / muss neu gedacht werden.
 
 Es geht ja noch weiter, wenn man sich zu sehr auf die negative Freiheit konzentriert, und versucht sie zu stärken, dreht man sich im Kreis. Sehnt sich nach etwas Bekanntem, etwas mit langer Tradition, und wendet sich gegen das ursprüngliche Ideal. Wenn man sich das Befreien von allen Zwängen zum Lebensinhalt gemacht hat ist das gegen der aufklärerischen Geist, der das überhaupt erst bedingt hat. Ich denke das qualifiziert sich als ein [Catch 22](https://de.wikipedia.org/wiki/Catch-22_(Dilemma) "catch 22")
 
