--- a/_posts/2021-02-10-freiheit.markdown
+++ b/_posts/2021-02-10-freiheit.markdown
@@ -55,7 +55,7 @@ Positive Freiheit ist eine *Fähigkeit*, die mit zunehmendem Level an negativer 
 
 [^3]: Deshalb ist es auch so schwer gesellschaftliche Systeme basierend auf Anarchie aufzubauen. Das Vakuum an Regeln führt zu einer enormen Komplexität, an die man sich langsam annähern müsste. 
 
-Eine Konsequenz von historisch hoher negativer Freiheit und Individualisierung ist, dass man positive Freiheit anwenden muss um eigene Strukturen zu definieren, die auf anderen Werten als der der Freiheit (z.B. *Gleichheit*) basieren.
+Eine Konsequenz von historisch hoher negativer Freiheit und Individualisierung ist, dass man positive Freiheit anwenden muss um eigene Strukturen zu definieren, die auf anderen Werten als der der Freiheit (z.B. *Gleichheit*, *Wahrheit*, *Fortschritt*)) basieren.
 
 Kritisch sehe ich die (negative) Freiheit als Ideal, weil es leicht scheint sie als Argument zum Abbau von Strukuturen und Rahmenbedingungen zu benutzen. Auch im Denken. Und das dann als etwas Positives zu verkaufen.
 
