--- a/_posts/2021-02-10-freiheit.markdown
+++ b/_posts/2021-02-10-freiheit.markdown
@@ -55,11 +55,11 @@ Positive Freiheit ist eine *Fähigkeit*, die mit zunehmendem Level an negativer 
 
 [^3]: Deshalb ist es auch so schwer gesellschaftliche Systeme basierend auf Anarchie aufzubauen. Das Vakuum an Regeln führt zu einer enormen Komplexität, an die man sich langsam annähern müsste. 
 
-Eine Konsequenz von historisch hoher negativer Freiheit und Individualisierung ist, dass man positive Freiheit anwenden muss um eigene Strukturen zu definieren, die auf anderen Werten als der der Freiheit (z.B. *Gleichheit*, *Wahrheit*, *Fortschritt*)) basieren.
+Eine Konsequenz von historisch hoher negativer Freiheit und Individualisierung ist, dass man positive Freiheit anwenden muss um eigene Strukturen zu definieren, die auf anderen Werten als der der Freiheit (z.B. *Gleichheit*, *Wahrheit*, *Fortschritt*) basieren.
 
-Kritisch sehe ich die (negative) Freiheit als Ideal, weil es leicht scheint sie als Argument zum Abbau von Strukuturen und Rahmenbedingungen zu benutzen. Auch im Denken. Und das dann als etwas Positives zu verkaufen.
+Kritisch sehe ich die (negative) Freiheit als Ideal, weil es leicht scheint sie als Argument zum Abbau von Strukturen und Rahmenbedingungen zu benutzen. Auch im Denken. Und das dann als etwas Positives zu verkaufen.
 
-Das geht einher mit der immer weiteren *Individualisierung* des Einzelnen. Irgendwann ist jeder sein eigener Staat, der sich um alle Belange selber kümmern muss. Bekommt individuelle Nachrichten angezeigt, die durch den Algorithmus spezifisch auf ihn zugeschnitten wurden. Es gibt auch keinen Weg mehr raus, weil man ja nur sich selbst vetrauen kann. Dem Selbst, das sich selbst vertärkt und definiert hat.
+Das geht einher mit der immer weiteren *Individualisierung* des Einzelnen. Irgendwann ist jeder sein eigener Staat, der sich um alle Belange selber kümmern muss. Bekommt individuelle Nachrichten angezeigt, die durch den Algorithmus spezifisch auf ihn zugeschnitten wurden. Es gibt auch keinen Weg mehr raus, weil man ja nur sich selbst vetrauen kann. Dem Selbst, das sich selbst verstärkt und definiert hat.
 
 ------------------------
 ### Podcasts dazu:
